# realtime-rust-abandoned

./: Cargo.toml  README.md
src/: auth.rs  connection.rs  conversation_id.rs  db.rs  hash.rs  init.rs  main.rs  models.rs
src/connection/: error.rs  nats_message.rs  notification_loop.rs  operation_loop.rs  user_event.rs
src/connection/notification_loop/: notification.rs
src/connection/operation_loop/: mutation.rs  operation.rs  query.rs  response.rs
src/models/: friend_profile.rs  message.rs  profile.rs
